[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krywok-kit-env"
version = "0.1.0"
description = "Krywok Kit Environment is a developer-centric environment variable manager. It leverages the Krywok Pipeline engine to treat environment variables not just as strings, but as strictly validated and transformed data structures."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Krywok", email = "degadupeko@my-relay.app" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["krywok-pipeline>=1.0.0", "python-dotenv"]

[project.urls]
Homepage = "https://github.com/krywok/krywok-kit-env"
Documentation = "https://github.com/krywok/krywok-kit-env"
Repository = "https://github.com/krywok/krywok-kit-env"
Issues = "https://github.com/krywok/krywok-kit-env/issues"

[tool.setuptools.packages.find]
where = ["."]
